--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,11 +6,17 @@ on:
       - 'main'
 
 env:
-  IMAGE: trends
+  IMAGE: cloud-native-crawler
+  MANIFEST_REPO: NYCU-cloud-native-team-11/cloud-native-manifest
+  MANIFEST_REPO_NAME: cloud-native-manifest
+  STAGE_FILE_NAME: values.stage.yaml
+  PROD_FILE_NAME: values.production.yaml
+  UPDATE_REPO: .app.crawler.image.repo
+  UPDATE_TAG: .app.crawler.image.tag
   
 
 jobs:
-  docker:
+  build:
     runs-on: ubuntu-latest
     steps:
       -
@@ -24,7 +30,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN}}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       - name: Set env
         run: echo "IMAGE_TAG=${{ secrets.DOCKER_HUB_USERNAME }}/$IMAGE:$GITHUB_SHA" >> $GITHUB_ENV
       - name: Test
@@ -35,3 +41,21 @@ jobs:
         with:
           push: true
           tags: ${{ env.IMAGE_TAG }}
+      - name: 🏗 Set up yq
+        uses: frenck/action-setup-yq@v1
+      - name: Update manifest
+        env:
+          REPO: ${{ env.MANIFEST_REPO }}
+          REPO_NAME: ${{ env.MANIFEST_REPO_NAME }}
+          TOKEN: ${{ secrets.CD_TOKEN }}
+        run: |
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git clone --single-branch --branch stage https://github.com/${REPO}.git
+          cd ${REPO_NAME}
+          yq eval -i "$UPDATE_REPO = \"${{ secrets.DOCKER_HUB_USERNAME }}/$IMAGE\"" $STAGE_FILE_NAME
+          yq eval -i "$UPDATE_TAG = \"$GITHUB_SHA\"" $STAGE_FILE_NAME
+          yq eval -i "$UPDATE_REPO = \"${{ secrets.DOCKER_HUB_USERNAME }}/$IMAGE\"" $PROD_FILE_NAME
+          yq eval -i "$UPDATE_TAG = \"$GITHUB_SHA\"" $PROD_FILE_NAME
+          git commit -am "$IMAGE image tag update"
+          git push https://${TOKEN}@github.com/${REPO}.git
